UI distortion fix

--- a/src/app/registration/registration.component.css
+++ b/src/app/registration/registration.component.css
@@ -11,7 +11,7 @@
   padding-left: 20px;
 }
 .registrationLayout {
-  height: 100%;
+  min-height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
